--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#145b8d</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#272ca6</color>
+    <color name="green">#00b801</color>
+    <color name="white">#dfdfdf</color>
 </resources>
