--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,21 +5,17 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:id="@+id/nav_brs"
+            android:icon="@drawable/ic_library_books_black_24dp"
+            android:title="Berita Resmi Statistik" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:id="@+id/nav_isp"
+            android:icon="@drawable/ic_show_chart_black_24dp"
+            android:title="Indikator Strategis Provinsi" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:id="@+id/nav_publikasi"
+            android:icon="@drawable/ic_collections_bookmark_black_24dp"
+            android:title="Publikasi" />
     </group>
 
     <item android:title="Communicate">
